force-app/main/default/objects/Client_Profile__c/Client_Profile__c.object-meta.xml
<CustomObject>
    <label>Client Profile</label>
    <nameField>
        <displayFormat>CP-{{0000}}</displayFormat>
        <label>Client Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>