force-app/main/default/objects/Client_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account field for Fitness Tracker.</description>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <required>true</required>
</CustomField>