force-app/main/default/objects/Client_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contact field for Fitness Tracker.</description>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact</relationshipLabel>
    <relationshipName>Contact</relationshipName>
    <required>true</required>
</CustomField>