force-app/main/default/objects/Client_Profile__c/fields/Goals_Summary__c.field-meta.xml
<CustomField>
    <fullName>Goals_Summary__c</fullName>
    <description>Goals Summary field for Fitness Tracker.</description>
    <label>Goals Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>