force-app/main/default/objects/Client_Profile__c/fields/Medical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medical_Notes__c</fullName>
    <description>Medical Notes field for Fitness Tracker.</description>
    <label>Medical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>