force-app/main/default/objects/Client_Profile__c/fields/Primary_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Trainer__c</fullName>
    <description>Primary Trainer field for Fitness Tracker.</description>
    <label>Primary Trainer</label>
    <type>Lookup</type>
    <referenceTo>Trainer_Profile__c</referenceTo>
    <relationshipLabel>Primary Trainer</relationshipLabel>
    <relationshipName>PrimaryTrainer</relationshipName>
</CustomField>