force-app/main/default/objects/Client_Profile__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status field for Fitness Tracker.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label
        >Active</label></value>
            <value><fullName>Paused</fullName><default>false</default><label
        >Paused</label></value>
            <value><fullName>Discharged</fullName><default>false</default><label
        >Discharged</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>